--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,8 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.11</version>
+			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
