use at to map action and msg

--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,10 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.8</version>
+		</dependency>
 	</dependencies>
 </project>
